* [CSS|JS] Fix overflow and word wrap popup for latest bar

--- a/css/statistics.css
+++ b/css/statistics.css
@@ -33,6 +33,7 @@
 	border: 1px solid #000000;
 	background-color: #FFFFFF;
 	padding: 5px;
+	white-space: nowrap;
 }
 
 
